--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -3,16 +3,9 @@
 - type: github
   icon: "fab fa-github"
 
-- type: twitter
-  icon: "fa-brands fa-x-twitter"
-
-- type: email
-  icon: "fas fa-envelope"
-  noblank: true # open link in current tab
-
-- type: rss
-  icon: "fas fa-rss"
-  noblank: true
+#- type: email
+#  icon: "fas fa-envelope"
+#  noblank: true # open link in current tab
 # Uncomment and complete the url below to enable more contact options
 #
 # - type: mastodon
@@ -27,10 +20,17 @@
 #   icon: 'fab fa-stack-overflow'
 #   url:  ''                  # Fill with your stackoverflow homepage
 #
-# - type: bluesky
-#   icon: 'fa-brands fa-bluesky'
-#   url: ''                   # Fill with your Bluesky profile link
-#
+- type: bluesky
+  icon: 'fa-brands fa-bluesky'
+  url: 'https://bsky.app/profile/edasmalchi.bsky.social' # Fill with your Bluesky profile link
+
+- type: twitter
+  icon: "fa-brands fa-x-twitter"
+
+- type: rss
+  icon: "fas fa-rss"
+  noblank: true
+
 # - type: reddit
 #   icon: 'fa-brands fa-reddit'
 #   url: ''                   # Fill with your Reddit profile link
