--- a/_config.yml
+++ b/_config.yml
@@ -64,8 +64,8 @@ analytics:
   goatcounter:
     id: # fill in your GoatCounter ID
   umami:
-    id: # fill in your Umami ID
-    domain: # fill in your Umami domain
+    id: "785bea52-6e10-4be6-80bd-901767cd07bd"
+    domain: treasuredtidings.net
   matomo:
     id: # fill in your Matomo ID
     domain: # fill in your Matomo domain
