--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ github:
   username: edasmalchi # change to your GitHub username
 
 twitter:
-  username: edasmalchi # change to your Twitter username
+  # username: edasmalchi # change to your Twitter username
 
 social:
   # Change to your full name.
@@ -40,7 +40,7 @@ social:
   links:
     # The first element serves as the copyright owner's link
     - https://github.com/edasmalchi # change to your GitHub homepage
-    - https://twitter.com/edasmalchi # change to your Twitter homepage
+    # - https://twitter.com/edasmalchi # change to your Twitter homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     - https://www.linkedin.com/in/edasmalchi
