--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ url: "https://www.treasuredtidings.net"
 github:
   username: edasmalchi # change to your GitHub username
 
-twitter:
+# twitter:
   # username: edasmalchi # change to your Twitter username
 
 social:
